// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the ProjectDetailProducts component. Should add a owned product pill and allow to remove 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <p
        class="card-title text-dial-stratos mb-3"
      >
        Assign
         
        Products
      </p>
      <label
        class="flex flex-col gap-y-2 mb-2"
        data-testid="product-search"
      >
        Search and Assign Products
        <div
          class=" css-l45kjq-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-:r5:-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="react-select__control css-qv4grc-control"
          >
            <div
              class="react-select__value-container css-17t7gkf-ValueContainer"
            >
              <div
                class="react-select__placeholder css-5rjclb-placeholder"
                id="react-select-:r5:-placeholder"
              >
                Type to search...
              </div>
              <div
                class="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-:r5:-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="react-select__input"
                  id="async-select-id-undefined"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="text-2xl"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
      <div
        class="flex flex-wrap gap-3 mt-5"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 1
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 3
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 2
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should add a pill and revert changes on "Cancel" button click 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <p
        class="card-title text-dial-stratos mb-3"
      >
        Assign
         
        Products
      </p>
      <label
        class="flex flex-col gap-y-2 mb-2"
        data-testid="product-search"
      >
        Search and Assign Products
        <div
          class=" css-l45kjq-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-:r2:-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="react-select__control css-qv4grc-control"
          >
            <div
              class="react-select__value-container css-17t7gkf-ValueContainer"
            >
              <div
                class="react-select__placeholder css-5rjclb-placeholder"
                id="react-select-:r2:-placeholder"
              >
                Type to search...
              </div>
              <div
                class="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-:r2:-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="react-select__input"
                  id="async-select-id-undefined"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="text-2xl"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
      <div
        class="flex flex-wrap gap-3 mt-5"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 1
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 3
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 2
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should match snapshot - with edit permission. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      >
        <button
          class="mr-2 cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
          data-testid="edit-button"
          type="button"
        >
          <svg
            class="inline pb-0.5"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20h9"
            />
            <path
              d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
            />
          </svg>
          <span
            class="text-sm px-1"
          >
            Edit
          </span>
        </button>
      </div>
    </div>
    <div
      class="grid grid-cols-1"
    >
      <a
        href="/products/product_1"
      >
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-3 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="relative flex flex-row flex-wrap gap-x-2 lg:gap-x-4 px-4 py-6"
            >
              <div
                class="w-10/12 lg:w-4/12 flex text-dial-gray-dark my-auto"
              >
                <div
                  class="block w-8 relative"
                >
                  <img
                    alt="Logo for: Product 1"
                    class="object-contain"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75"
                    srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="ml-2 mt-0.5 w-full h-3/5 font-semibold line-clamp-1"
                >
                  Product 1
                </div>
              </div>
              <div
                class="w-8/12 lg:w-4/12 text-sm lg:text-base my-auto text-dial-purple line-clamp-1"
              />
              <div
                class="absolute top-4 lg:top-1/3 right-4 lg:w-1/12 lg:justify-end"
              >
                <div
                  class="flex gap-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="/products/product_3"
      >
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-3 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="relative flex flex-row flex-wrap gap-x-2 lg:gap-x-4 px-4 py-6"
            >
              <div
                class="w-10/12 lg:w-4/12 flex text-dial-gray-dark my-auto"
              >
                <div
                  class="block w-8 relative"
                >
                  <img
                    alt="Logo for: Product 3"
                    class="object-contain"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75"
                    srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="ml-2 mt-0.5 w-full h-3/5 font-semibold line-clamp-1"
                >
                  Product 3
                </div>
              </div>
              <div
                class="w-8/12 lg:w-4/12 text-sm lg:text-base my-auto text-dial-purple line-clamp-1"
              />
              <div
                class="absolute top-4 lg:top-1/3 right-4 lg:w-1/12 lg:justify-end"
              >
                <div
                  class="flex gap-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should match snapshot - with open editable section 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <p
        class="card-title text-dial-stratos mb-3"
      >
        Assign
         
        Products
      </p>
      <label
        class="flex flex-col gap-y-2 mb-2"
        data-testid="product-search"
      >
        Search and Assign Products
        <div
          class=" css-l45kjq-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-:r0:-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="react-select__control css-qv4grc-control"
          >
            <div
              class="react-select__value-container css-17t7gkf-ValueContainer"
            >
              <div
                class="react-select__placeholder css-5rjclb-placeholder"
                id="react-select-:r0:-placeholder"
              >
                Type to search...
              </div>
              <div
                class="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-:r0:-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="react-select__input"
                  id="async-select-id-undefined"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="text-2xl"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
      <div
        class="flex flex-wrap gap-3 mt-5"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 1
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 3
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          disabled=""
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should match snapshot - without edit permission. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="grid grid-cols-1"
    >
      <a
        href="/products/product_1"
      >
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-3 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="relative flex flex-row flex-wrap gap-x-2 lg:gap-x-4 px-4 py-6"
            >
              <div
                class="w-10/12 lg:w-4/12 flex text-dial-gray-dark my-auto"
              >
                <div
                  class="block w-8 relative"
                >
                  <img
                    alt="Logo for: Product 1"
                    class="object-contain"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75"
                    srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="ml-2 mt-0.5 w-full h-3/5 font-semibold line-clamp-1"
                >
                  Product 1
                </div>
              </div>
              <div
                class="w-8/12 lg:w-4/12 text-sm lg:text-base my-auto text-dial-purple line-clamp-1"
              />
              <div
                class="absolute top-4 lg:top-1/3 right-4 lg:w-1/12 lg:justify-end"
              >
                <div
                  class="flex gap-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="/products/product_3"
      >
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-3 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="relative flex flex-row flex-wrap gap-x-2 lg:gap-x-4 px-4 py-6"
            >
              <div
                class="w-10/12 lg:w-4/12 flex text-dial-gray-dark my-auto"
              >
                <div
                  class="block w-8 relative"
                >
                  <img
                    alt="Logo for: Product 3"
                    class="object-contain"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75"
                    srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=640&q=75 640w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=750&q=75 750w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=828&q=75 828w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2Fundefined&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="ml-2 mt-0.5 w-full h-3/5 font-semibold line-clamp-1"
                >
                  Product 3
                </div>
              </div>
              <div
                class="w-8/12 lg:w-4/12 text-sm lg:text-base my-auto text-dial-purple line-clamp-1"
              />
              <div
                class="absolute top-4 lg:top-1/3 right-4 lg:w-1/12 lg:justify-end"
              >
                <div
                  class="flex gap-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should remove a pill 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <p
        class="card-title text-dial-stratos mb-3"
      >
        Assign
         
        Products
      </p>
      <label
        class="flex flex-col gap-y-2 mb-2"
        data-testid="product-search"
      >
        Search and Assign Products
        <div
          class=" css-l45kjq-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-:r1:-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="react-select__control css-qv4grc-control"
          >
            <div
              class="react-select__value-container css-17t7gkf-ValueContainer"
            >
              <div
                class="react-select__placeholder css-5rjclb-placeholder"
                id="react-select-:r1:-placeholder"
              >
                Type to search...
              </div>
              <div
                class="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-:r1:-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="react-select__input"
                  id="async-select-id-undefined"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="text-2xl"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
      <div
        class="flex flex-wrap gap-3 mt-5"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 1
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the ProjectDetailProducts component. Should render Products with read only owned product pill 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Products
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <p
        class="card-title text-dial-stratos mb-3"
      >
        Assign
         
        Products
      </p>
      <label
        class="flex flex-col gap-y-2 mb-2"
        data-testid="product-search"
      >
        Search and Assign Products
        <div
          class=" css-l45kjq-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-:r4:-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="react-select__control css-qv4grc-control"
          >
            <div
              class="react-select__value-container css-17t7gkf-ValueContainer"
            >
              <div
                class="react-select__placeholder css-5rjclb-placeholder"
                id="react-select-:r4:-placeholder"
              >
                Type to search...
              </div>
              <div
                class="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-:r4:-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="react-select__input"
                  id="async-select-id-undefined"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="text-2xl"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </label>
      <div
        class="flex flex-wrap gap-3 mt-5"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 1
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          Product 3
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          disabled=""
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
